--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "economy_dashboard",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "date-fns": "^2.29.3",
+    "faker": "^5.5.3",
+    "googleapis": "^105.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
+    "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
