--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "economy_dashboard",
-  "homepage": "./",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
