--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arcgis/core": "^4.26.5",
     "@esri/calcite-components-react": "^0.37.0",
     "@google-cloud/local-auth": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "esri-loader": "^3.7.0",
     "faker": "^5.5.3",
     "googleapis": "^105.0.0",
     "react": "^18.2.0",
