--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.6",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "bootstrap": "^5.2.3",
-    "date-fns": "^2.29.3",
-    "react": "^18.2.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.5",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.2.0",
-    "sass": "^1.57.1",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.15.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "svgo": "^3.3.2",
+    "web-vitals": "^4.2.4",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.0",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
